# clmem

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  README.zh-CN.md  README.zh-TW.md  clmem.toml.example
docs/plans/: 2026-03-29-clmem-design.md  2026-03-29-deferred-fix-plan.md  2026-03-29-multi-team-plan.md  2026-03-29-review-fix-plan.md  2026-03-29-v0.8.0-tui-enhancement.md
src/: main.rs  util.rs
src/cli/: cleanup.rs  config.rs  daemon_cmd.rs  history.rs  mod.rs  report.rs  status.rs  tui_cmd.rs
src/daemon/: analyzer.rs  event.rs  mod.rs  profiler.rs  reaper.rs  scanner.rs
src/ipc/: mod.rs  protocol.rs  server.rs
src/models/: config.rs  events.rs  mod.rs  process.rs  snapshot.rs
src/platform/: linux.rs  macos.rs  mod.rs  windows.rs
src/tui/: alerts.rs  charts.rs  dashboard.rs  mod.rs  process_list.rs
